tests/fixtures/invalid/pow_bool_dict_float.py
# Cannot call pow() with Bool, Dict[str, int], Float
x = pow(True, {"a": 1}, 1.0)
